--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+
 
     <TextView
         android:id="@+id/textViewInstruction"
@@ -13,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/startButton"
+        app:layout_constraintBottom_toBottomOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +34,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16" />
+        app:layout_constraintVertical_bias="0.16"
+        android:visibility="gone"/>
 
     <ImageView
         android:layout_width="139dp"
@@ -43,53 +47,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.325" />
 
-    <EditText
-        android:id="@+id/editTextMinute"
+    <com.example.myapplication.TimeSegment
+        android:id="@+id/time_segment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:inputType="number"
-        android:minWidth="48dp"
-        android:minHeight="48dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.617"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <TextView
-        android:id="@+id/textViewTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="00:00:00"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="@+id/startButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.68" />
+        app:layout_constraintVertical_bias="0.692"
+        app:ts_time_background="@drawable/time_box" />
 
-    <ImageButton
-        android:id="@+id/startButton"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/white"
-        android:src="@drawable/custom_button"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <ImageButton
-        android:id="@+id/finishRestButton"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/white"
-        android:src="@drawable/custom_button"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageButton
         android:id="@+id/button"
@@ -97,7 +67,6 @@
         android:layout_height="150dp"
         android:background="@color/white"
         android:src="@drawable/custom_button"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
@@ -114,6 +83,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.93" />
+
+
+    <com.example.myapplication.CircularSeekBar
+        android:id="@+id/circular_seekbar"
+        android:layout_width="313dp"
+        android:layout_height="307dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintVertical_bias="0.231"
+        custom:cs_circle_color="@color/grey"
+        custom:cs_circle_progress_color="@color/pink"
+        custom:cs_circle_stroke_width="9dp"
+
+        custom:cs_pointer_color="@color/pink"
+        custom:cs_pointer_halo_color="@color/purple_200"
+        custom:cs_pointer_stroke_width="20dp"
+        custom:cs_pointer_halo_width="4dp"
+        custom:cs_disable_pointer="false" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
