--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,11 @@
     <color name="pink">#FFB4D0</color>
     <color name="grey">#EDEDED</color>
     <color name="blue">#8FC0FF</color>
+<!--    <color name="dark_blue"></color>-->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="bright_yellow">#FFFFD27E</color>
 </resources>
