--- a/app/src/main/res/layout/time_segment.xml
+++ b/app/src/main/res/layout/time_segment.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/time_box"
+        android:background="@drawable/time_box_grey"
         android:padding="5dp"
         android:text="00"
         android:textSize="48sp"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="16dp"
-        android:background="@drawable/time_box"
+        android:background="@drawable/time_box_grey"
         android:padding="5dp"
         android:text="00"
         android:textSize="48sp"
