--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="pink">#FFB4D0</color>
     <color name="grey">#EDEDED</color>
     <color name="blue">#8FC0FF</color>
-<!--    <color name="dark_blue"></color>-->
+    <color name="dark_blue">#75ABE7</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
