--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- A blank frame layout of the settings activity -->
     <FrameLayout
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
