--- a/app/src/main/res/layout/activity_whitelist.xml
+++ b/app/src/main/res/layout/activity_whitelist.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- Create a layout which can be updated dynamically-->
+
 <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
