--- a/app/src/main/res/layout/activity_white_list_chooser.xml
+++ b/app/src/main/res/layout/activity_white_list_chooser.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WhiteListChooserActivity">
+    tools:context=".settings_screen.WhiteListChooserActivity">
 
     <ListView
         android:id="@+id/whitelist_chooser"
