--- a/app/src/main/res/layout/activity_whitelist.xml
+++ b/app/src/main/res/layout/activity_whitelist.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:flexWrap="wrap"
-    tools:context=".WhitelistActivity">
+    tools:context=".focus_screen.WhitelistActivity">
 
 
 </com.google.android.flexbox.FlexboxLayout>
