extracted all local strings to strings.xml

--- a/app/src/main/res/layout/activity_focus.xml
+++ b/app/src/main/res/layout/activity_focus.xml
@@ -53,7 +53,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="80dp"
         android:backgroundTint="@color/bright_yellow"
-        android:text="Exit"
+        android:text="@string/exit_focus"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.807"
@@ -98,7 +98,7 @@
         android:layout_width="135dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/bright_yellow"
-        android:text="Whitelist"
+        android:text="@string/whitelist"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.17"
         app:layout_constraintStart_toStartOf="parent"
