--- a/app/src/main/res/layout/activity_white_list_chooser.xml
+++ b/app/src/main/res/layout/activity_white_list_chooser.xml
@@ -20,7 +20,7 @@
         android:layout_width="214dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:text="Save"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -30,7 +30,7 @@
         android:layout_width="213dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:text="Cancel"
+        android:text="@android:string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
