--- a/app/src/main/res/layout/app_info_layout.xml
+++ b/app/src/main/res/layout/app_info_layout.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginStart="20dp"
-        android:text="AppName"
+        android:text="@string/app_name"
         app:layout_constraintBottom_toBottomOf="@+id/app_icon"
         app:layout_constraintStart_toEndOf="@+id/app_icon"
         app:layout_constraintTop_toTopOf="@+id/app_icon"
