--- a/app/src/main/res/layout/number_picker_dialog.xml
+++ b/app/src/main/res/layout/number_picker_dialog.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center">
@@ -28,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="77dp"
             android:layout_marginStart="100dp"
-            android:text="min"
+            android:text="@string/minute"
             android:textSize="18sp">
         </TextView>
 
